User johns
Date:

    Use current configuration for setup menu.
    Initial support of replay.
    Workaround for libva-driver-intel 1080i problems.
    DisplayFrame displays now only a single frame.
    Add deinterlace/scaling modes to setup.

Date: Sat Dec 10 00:06:46 CET 2011

    Release Version 0.0.9
    Pass audio/video PTS to codec.
    Fix libva-driver-intel OSD problems.
    Add audio resample support.
    Reduce program exit crashes.
    Add libva-driver-vdpau autodetection.
    Add workaround for bugs in libva-driver-vdpau.
    Threaded video display handler written.
    Add support for unscaled osd (f.e. supported by intel-vaapi)
    Add support for 16:9 and 4:3 video streams.
    Add buildin X11 server start.
    Remove ffmpeg deprecated functions.
    Disable display of window cursor.
    Can force self as primary device.
    Smaller audio buffer.
    Don't trust ffmpeg or stream interlace flag.
    Fix Makefile.
    Add setting analog volume.

Date: Thu Dec  1 20:48:35 CET 2011

    Release Version 0.0.5